# dirmarks

./: .env.sample  .env.test  .gitignore  Cargo.toml  Makefile  README.md  TODO.md  rustfmt.toml
migrations/2020-03-20-172921_create_bookmarks/: up.sql
migrations/2021-02-10-193350_create_histories/: down.sql  up.sql
src/: commands.rs  constants.rs  error.rs  errors.rs  fzf.rs  lib.rs  main.rs  result.rs  schema.rs  types.rs
src/command/: add.rs  delete.rs  init.rs  jump.rs  list.rs  migrate.rs  mod.rs  option.rs  rename.rs
src/commands/: add.rs  basic.rs  completion.rs  delete.rs  history.rs  init.rs  jump.rs  list.rs  migrate.rs  mod.rs  option.rs  rename.rs  util.rs
src/commands/basic/: add.rs  check.rs  delete.rs  jump.rs  list.rs  mod.rs  rename.rs  select.rs
src/commands/history/: add.rs  jump.rs  mod.rs  save.rs
src/commands/util/: completion.rs  init.rs  migrate.rs
src/database/: connection.rs  mod.rs  model.rs  repository.rs
src/models/: bookmark.rs  history.rs  mod.rs  result.rs
src/utils/: bookmark_service.rs  config.rs  database.rs  mod.rs
