[package]
name = "dirmarks"
version = "0.2.2"
authors = ["Luku <luku.3659@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
prettytable-rs = "0.8.0"
structopt = "0.3.25"
colored = "2.0.0"
anyhow = "1.0.51"
thiserror = "1.0.30"
derive_more = "0.99.17"
once_cell = "1.9.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.14"
termion = "1.5.6"
serde = { version = "1.0.132", features = ["derive"] }
config = "0.11.0"
smart-default = "0.6.0"
chrono = "0.4.19"
