[package]
name = "dirmarks"
version = "0.2.3"
authors = ["Luku <luku.3659@gmail.com>"]
edition = "2018"

[dependencies]
diesel = { version = "1.4.8", features = ["sqlite", "chrono"] }
prettytable-rs = "0.8.0"
structopt = "0.3.26"
colored = "2.0.0"
anyhow = "1.0.58"
thiserror = "1.0.31"
derive_more = "0.99.17"
once_cell = "1.13.0"
dotenv = "0.15.0"
env_logger = "0.9.0"
log = "0.4.17"
termion = "1.5.6"
serde = { version = "1.0.139", features = ["derive"] }
envy = "0.4.2"
smart-default = "0.6.0"
chrono = "0.4.19"
