[package]
name = "dirmarks"
version = "0.2.2"
authors = ["Luku <luku.3659@gmail.com>"]
edition = "2021"

[dependencies]
diesel = { version = "2.0.2", features = ["sqlite", "chrono"] }
prettytable-rs = "0.9.0"
structopt = "0.3.26"
colored = "2.0.0"
anyhow = "1.0.68"
thiserror = "1.0.38"
derive_more = "0.99.17"
once_cell = "1.16.0"
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
termion = "2.0.1"
serde = { version = "1.0.151", features = ["derive"] }
config = "0.13.3"
smart-default = "0.6.0"
chrono = "0.4.23"
enum_dispatch = "0.3.8"
